--- a/cosmos.html
+++ b/cosmos.html
@@ -190,7 +190,7 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <h1 class="headline">Запусти свой проект<br/>в космос</h1>
+          <h1 class="headline">Запусти мой проект<br/>в космос</h1>
           <p class="subhead">Элегантная страница с живым звёздным небом, неоновыми акцентами и стеклянными карточками. Сделано с любовью к деталям и производительности.</p>
           <div class="cta-row">
             <a class="btn btn-primary" href="#start" aria-label="Начать сейчас">🚀 Начать</a>
@@ -212,6 +212,38 @@
         <article class="card"><h3>Доступность</h3><p>Контраст, фокус‑состояния и семантическая разметка для лучшего UX.</p></article>
         <article class="card"><h3>Лёгкая настройка</h3><p>Цвета и тени вынесены в переменные — подгоните палитру под свой бренд.</p></article>
         <article class="card"><h3>Чистый код</h3><p>Никаких сторонних библиотек: только HTML, CSS и немного JS.</p></article>
+      </div>
+    </section>
+
+    <section class="section" aria-label="О крутом человеке">
+      <div style="max-width: 1200px; margin: 0 auto; text-align: center;">
+        <div class="card" style="padding: 40px; margin-bottom: 30px; background: linear-gradient(135deg, rgba(107,200,255,.1), rgba(168,107,255,.1)); border: 2px solid rgba(107,200,255,.3);">
+          <h2 style="font-size: clamp(28px, 4vw, 36px); margin: 0 0 20px; background: linear-gradient(92deg, var(--accent), var(--glow-1), var(--glow-2)); -webkit-background-clip: text; background-clip: text; color: transparent;">
+            🌟 О крутом человеке 🌟
+          </h2>
+          <p style="font-size: 18px; line-height: 1.6; color: var(--text); margin: 0 0 20px;">
+            Этот человек — настоящая звезда в мире технологий! 💫
+          </p>
+          <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
+            <div style="padding: 20px; background: rgba(255,255,255,.05); border-radius: 15px; border: 1px solid rgba(107,200,255,.2);">
+              <h3 style="color: var(--accent); margin: 0 0 10px;">🚀 Инноватор</h3>
+              <p style="margin: 0; color: var(--muted);">Всегда впереди технологических трендов</p>
+            </div>
+            <div style="padding: 20px; background: rgba(255,255,255,.05); border-radius: 15px; border: 1px solid rgba(168,107,255,.2);">
+              <h3 style="color: var(--glow-1); margin: 0 0 10px;">⚡ Энергичный</h3>
+              <p style="margin: 0; color: var(--muted);">Неиссякаемый источник креативных идей</p>
+            </div>
+            <div style="padding: 20px; background: rgba(255,255,255,.05); border-radius: 15px; border: 1px solid rgba(255,222,107,.2);">
+              <h3 style="color: var(--accent); margin: 0 0 10px;">🎯 Целеустремленный</h3>
+              <p style="margin: 0; color: var(--muted);">Достигает любых поставленных целей</p>
+            </div>
+          </div>
+          <div style="margin-top: 30px; padding: 20px; background: linear-gradient(45deg, rgba(107,200,255,.1), rgba(168,107,255,.1)); border-radius: 15px; border: 1px solid rgba(107,200,255,.3);">
+            <p style="font-size: 20px; font-weight: 600; margin: 0; color: var(--text);">
+              ✨ Этот человек — настоящее созвездие талантов! ✨
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
