--- a/cosmos.html
+++ b/cosmos.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cosmic • Красивая космическая страница</title>
-  <meta name="description" content="Cайт в космическом стиле." />
+  <meta name="description" content="Cайт в космическом стиле, сделанная командой БРИ" />
   <style>
     :root {
       --bg-1: #070b1b;    /* глубокий космос */
