РР·РјРµРЅРёР» Р·Р°РіРѕР»РѕРІРѕРє: 'Р—Р°РїСѓСЃС‚Рё РјРѕСЋ РёРґРµСЋ РІ СЂРµР°Р»РёР·Р°С†РёСЋ'

--- a/cosmos.html
+++ b/cosmos.html
@@ -190,7 +190,7 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <h1 class="headline">Запусти мой проект<br/>в космос</h1>
+          <h1 class="headline">Запусти мою идею<br/>в реализацию</h1>
           <p class="subhead">Элегантная страница с живым звёздным небом, неоновыми акцентами и стеклянными карточками. Сделано с любовью к деталям и производительности.</p>
           <div class="cta-row">
             <a class="btn btn-primary" href="#start" aria-label="Начать сейчас">🚀 Начать</a>
