--- a/cosmos.html
+++ b/cosmos.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cosmic • Красивая космическая страница</title>
-  <meta name="description" content="Cайт в космическом стиле, сделанная командой БРИ" />
+  <title>Cosmic • Beautiful Space Page</title>
+  <meta name="description" content="Space-themed website, made by the BRI team" />
   <style>
     :root {
-      --bg-1: #1b0b1b;    /* глубокий розовый космос */
-      --bg-2: #331633;    /* мягкая розовая ночь */
-      --glow-1: #ff6bc8;  /* неоновый розовый */
-      --glow-2: #ff6ba8;  /* неоновый розово-красный */
-      --accent: #ff6bde;  /* розовый акцент */
-      --text: #ffe7f9;    /* базовый текст */
-      --muted: #d6aab0;   /* вторичный */
+      --bg-1: #1b0b1b;    /* deep pink space */
+      --bg-2: #331633;    /* soft pink night */
+      --glow-1: #ff6bc8;  /* neon pink */
+      --glow-2: #ff6ba8;  /* neon pink-red */
+      --accent: #ff6bde;  /* pink accent */
+      --text: #ffe7f9;    /* base text */
+      --muted: #d6aab0;   /* secondary */
       --glass: rgba(255,255,255,.06);
       --glass-stroke: rgba(255,255,255,.15);
       --radius-2xl: 24px;
       --shadow-lg: 0 10px 30px rgba(0,0,0,.45);
     }
 
-    /* CSS reset (не агрессивный) */
+    /* CSS reset (non-aggressive) */
     * { box-sizing: border-box; }
     html, body { height: 100%; }
     body {
@@ -31,19 +31,19 @@
       overflow-x: hidden;
     }
 
-    /* Звёздное небо (canvas) занимает фон */
+    /* Starfield (canvas) takes background */
     #starfield {
       position: fixed; inset: 0; z-index: -2; display: block; width: 100%; height: 100%;
     }
 
-    /* Слабое сияние поверх звёзд */
+    /* Subtle glow over stars */
     .space-glow { position: fixed; inset: 0; z-index: -1; pointer-events: none;
       background: radial-gradient(700px 500px at 15% 85%, rgba(255,107,222,.08), transparent 60%),
                   radial-gradient(1000px 600px at 85% 20%, rgba(255,107,200,.08), transparent 60%);
       filter: saturate(120%);
     }
 
-    /* Навигация */
+    /* Navigation */
     .nav {
       position: sticky; top: 0; backdrop-filter: blur(10px);
       background: linear-gradient(180deg, rgba(15,22,51,.75), rgba(15,22,51,.35));
@@ -57,7 +57,7 @@
     .nav a { color: var(--muted); text-decoration: none; padding: 8px 12px; border-radius: 10px; transition: color .2s, background .2s; }
     .nav a:hover { color: var(--text); background: var(--glass); }
 
-    /* Хиро секция */
+    /* Hero section */
     .hero { position: relative; padding: 80px 20px 60px; }
     .hero-inner { max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: 1.2fr 1fr; gap: 32px; align-items: center; }
 
@@ -81,7 +81,7 @@
     .btn-ghost { color: var(--text); background: linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.04)); border-color: var(--glass-stroke); box-shadow: 0 8px 24px rgba(0,0,0,.35), inset 0 0 0 1px rgba(255,255,255,.08); }
     .btn-ghost:hover { background: linear-gradient(180deg, rgba(255,255,255,.12), rgba(255,255,255,.06)); }
 
-    /* Иллюстрация справа */
+    /* Illustration on the right */
     .orbital {
       position: relative; min-height: 420px; isolation: isolate; display: grid; place-items: center;
       border-radius: var(--radius-2xl);
@@ -106,7 +106,7 @@
     @keyframes rotate { to { transform: rotate(360deg); } }
     @keyframes float { 0%,100%{ transform: translateY(0); } 50%{ transform: translateY(-10px); } }
 
-    /* Блоки преимуществ */
+    /* Feature blocks */
     .section { padding: 40px 20px; }
     .features { max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(3, 1fr); gap: 18px; }
     @media (max-width: 1000px) { .features { grid-template-columns: repeat(2, 1fr); } }
@@ -127,7 +127,7 @@
     .card h3 { margin: 0 0 6px; font-size: 20px; letter-spacing: .3px; }
     .card p { margin: 0; color: var(--muted); }
 
-    /* Галерея/созвездия */
+    /* Gallery/constellations */
     .gallery { max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(12, 1fr); gap: 14px; }
     .tile {
       grid-column: span 4; min-height: 160px; border-radius: 18px; position: relative;
@@ -140,7 +140,7 @@
 
     .tile .caption { position: absolute; left: 16px; bottom: 14px; color: var(--muted); font-weight: 600; letter-spacing: .3px; }
     
-    /* Иконки созвездий */
+    /* Constellation icons */
     .constellation-icon {
       position: absolute;
       top: 16px;
@@ -166,11 +166,11 @@
     .orb-dot { position: absolute; width: 6px; height: 6px; background: var(--accent); border-radius: 50%; box-shadow: 0 0 14px var(--accent); }
     .line { position: absolute; height: 2px; background: linear-gradient(90deg, transparent, var(--glow-1), transparent); opacity: .6; }
 
-    /* Футер */
+    /* Footer */
     footer { padding: 40px 20px 70px; color: var(--muted); text-align: center; }
     .credits a { color: var(--text); text-decoration: none; border-bottom: 1px dashed rgba(255,255,255,.25); }
 
-    /* Секция CTA внизу */
+    /* Bottom CTA section */
     .cta-bottom {
       max-width: 1200px; margin: 60px auto 0; padding: 20px; border-radius: var(--radius-2xl);
       background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
@@ -187,7 +187,7 @@
     }
     @keyframes pulse { 0%,100%{ opacity:.8 } 50%{ opacity: .45 } }
 
-    /* Доступность */
+    /* Accessibility */
     .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); border: 0; }
   </style>
 </head>
@@ -195,16 +195,16 @@
   <canvas id="starfield" aria-hidden="true"></canvas>
   <div class="space-glow" aria-hidden="true"></div>
 
-  <header class="nav" role="navigation" aria-label="Основная навигация">
+  <header class="nav" role="navigation" aria-label="Main navigation">
     <div class="nav-wrap">
       <div class="brand" aria-label="Cosmic Brand">
         <div class="logo" aria-hidden="true"></div>
         <span>Cosmic</span>
       </div>
       <nav class="nav-links">
-        <a href="#features">Особенности</a>
-        <a href="#gallery">Созвездия</a>
-        <a href="#start">Начать</a>
+        <a href="#features">Features</a>
+        <a href="#gallery">Constellations</a>
+        <a href="#start">Get Started</a>
       </nav>
     </div>
   </header>
@@ -213,11 +213,11 @@
     <section class="hero">
       <div class="hero-inner">
         <div>
-          <h1 class="headline">Запусти мою идею<br/>в реализацию</h1>
-          <p class="subhead">Элегантная страница с живым звёздным небом, неоновыми акцентами и стеклянными карточками. Сделано с любовью к деталям и производительности.</p>
+          <h1 class="headline">Launch my idea<br/>into reality</h1>
+          <p class="subhead">Elegant page with live starfield, neon accents and glass cards. Made with love for details and performance.</p>
           <div class="cta-row">
-            <a class="btn btn-primary" href="#start" aria-label="Начать сейчас">🚀 Начать</a>
-            <a class="btn btn-ghost" href="#features" aria-label="Посмотреть особенности">✨ Особенности</a>
+            <a class="btn btn-primary" href="#start" aria-label="Get started now">🚀 Get Started</a>
+            <a class="btn btn-ghost" href="#features" aria-label="View features">✨ Features</a>
           </div>
         </div>
         <div class="orbital" aria-hidden="true">
@@ -227,54 +227,54 @@
       </div>
     </section>
 
-    <section id="features" class="section" aria-label="Особенности">
+    <section id="features" class="section" aria-label="Features">
       <div class="features">
-        <article class="card"><h3>Неоновый стиль</h3><p>Мягкий градиент, акцентные подсветки и стеклянные панели создают ощущение глубины и космоса.</p></article>
-        <article class="card"><h3>Живое небо</h3><p>Canvas‑анимация звёзд с лёгким мерцанием и редкими «метеорами» без нагрузки на процессор.</p></article>
-        <article class="card"><h3>Адаптивный дизайн</h3><p>Страница прекрасно смотрится и на телефоне, и на 4K‑мониторе.</p></article>
-        <article class="card"><h3>Доступность</h3><p>Контраст, фокус‑состояния и семантическая разметка для лучшего UX.</p></article>
-        <article class="card"><h3>Лёгкая настройка</h3><p>Цвета и тени вынесены в переменные — подгоните палитру под свой бренд.</p></article>
-        <article class="card"><h3>Чистый код</h3><p>Никаких сторонних библиотек: только HTML, CSS и немного JS.</p></article>
+        <article class="card"><h3>Neon Style</h3><p>Soft gradients, accent highlights and glass panels create a sense of depth and space.</p></article>
+        <article class="card"><h3>Live Sky</h3><p>Canvas star animation with subtle twinkling and rare "meteors" without CPU load.</p></article>
+        <article class="card"><h3>Responsive Design</h3><p>The page looks great both on mobile and 4K monitors.</p></article>
+        <article class="card"><h3>Accessibility</h3><p>Contrast, focus states and semantic markup for better UX.</p></article>
+        <article class="card"><h3>Easy Customization</h3><p>Colors and shadows are in variables — adjust the palette to your brand.</p></article>
+        <article class="card"><h3>Clean Code</h3><p>No third-party libraries: just HTML, CSS and a bit of JS.</p></article>
       </div>
     </section>
 
-    <section class="section" aria-label="О крутом человеке">
+    <section class="section" aria-label="About an awesome person">
       <div style="max-width: 1200px; margin: 0 auto; text-align: center;">
         <div class="card" style="padding: 40px; margin-bottom: 30px; background: linear-gradient(135deg, rgba(255,107,200,.1), rgba(255,107,168,.1)); border: 2px solid rgba(255,107,200,.3);">
           <h2 style="font-size: clamp(28px, 4vw, 36px); margin: 0 0 20px; background: linear-gradient(92deg, var(--accent), var(--glow-1), var(--glow-2)); -webkit-background-clip: text; background-clip: text; color: transparent;">
-            🌟 О крутом человеке 🌟
+            🌟 About an Awesome Person 🌟
           </h2>
           <p style="font-size: 18px; line-height: 1.6; color: var(--text); margin: 0 0 20px;">
-            Этот человек — настоящая звезда в мире технологий! 💫
+            This person is a real star in the world of technology! 💫
           </p>
           <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
             <div style="padding: 20px; background: rgba(255,255,255,.05); border-radius: 15px; border: 1px solid rgba(255,107,200,.2);">
-              <h3 style="color: var(--accent); margin: 0 0 10px;">🚀 Инноватор</h3>
-              <p style="margin: 0; color: var(--muted);">Всегда впереди технологических трендов</p>
+              <h3 style="color: var(--accent); margin: 0 0 10px;">🚀 Innovator</h3>
+              <p style="margin: 0; color: var(--muted);">Always ahead of technology trends</p>
             </div>
             <div style="padding: 20px; background: rgba(255,255,255,.05); border-radius: 15px; border: 1px solid rgba(255,107,168,.2);">
-              <h3 style="color: var(--glow-1); margin: 0 0 10px;">⚡ Энергичный</h3>
-              <p style="margin: 0; color: var(--muted);">Неиссякаемый источник креативных идей</p>
+              <h3 style="color: var(--glow-1); margin: 0 0 10px;">⚡ Energetic</h3>
+              <p style="margin: 0; color: var(--muted);">Inexhaustible source of creative ideas</p>
             </div>
             <div style="padding: 20px; background: rgba(255,255,255,.05); border-radius: 15px; border: 1px solid rgba(255,107,222,.2);">
-              <h3 style="color: var(--accent); margin: 0 0 10px;">🎯 Целеустремленный</h3>
-              <p style="margin: 0; color: var(--muted);">Достигает любых поставленных целей</p>
+              <h3 style="color: var(--accent); margin: 0 0 10px;">🎯 Goal-oriented</h3>
+              <p style="margin: 0; color: var(--muted);">Achieves any set goals</p>
             </div>
           </div>
           <div style="margin-top: 30px; padding: 20px; background: linear-gradient(45deg, rgba(255,107,200,.1), rgba(255,107,168,.1)); border-radius: 15px; border: 1px solid rgba(255,107,200,.3);">
             <p style="font-size: 20px; font-weight: 600; margin: 0; color: var(--text);">
-              ✨ Этот человек — настоящее созвездие талантов! ✨
+              ✨ This person is a real constellation of talents! ✨
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="gallery" class="section" aria-label="Созвездия">
+    <section id="gallery" class="section" aria-label="Constellations">
       <div class="gallery">
         <div class="tile large">
           <div class="constellation-icon">💡</div>
-          <span class="caption">Созвездие «Идея»</span>
+          <span class="caption">Constellation "Idea"</span>
           <i class="orb-dot" style="left:22%; top:30%"></i>
           <i class="orb-dot" style="left:40%; top:60%"></i>
           <i class="orb-dot" style="left:68%; top:42%"></i>
@@ -285,27 +285,27 @@
         </div>
         <div class="tile">
           <div class="constellation-icon">🌌</div>
-          <span class="caption">Туманность «Релиз»</span>
+          <span class="caption">Nebula "Release"</span>
         </div>
         <div class="tile">
           <div class="constellation-icon">👥</div>
-          <span class="caption">Кластер «Команда»</span>
+          <span class="caption">Cluster "Team"</span>
         </div>
         <div class="tile">
           <div class="constellation-icon">⚡</div>
-          <span class="caption">Пояс «Стабильность»</span>
+          <span class="caption">Belt "Stability"</span>
         </div>
       </div>
     </section>
 
-    <section id="start" class="section" aria-label="Начать">
+    <section id="start" class="section" aria-label="Get Started">
       <div class="cta-bottom">
         <div>
-          <h3>Готовы к взлёту?</h3>
-          <p>Скопируйте этот шаблон, замените текст и цвета — и у вас уже есть стильная космическая витрина.</p>
+          <h3>Ready for takeoff?</h3>
+          <p>Copy this template, replace text and colors — and you already have a stylish space showcase.</p>
           <div class="cta-row">
-            <a class="btn btn-primary" href="#" onclick="alert('Поехали! 🚀')">Запуск</a>
-            <a class="btn btn-ghost" href="#top" onclick="window.scrollTo({top:0, behavior:'smooth'})">Наверх</a>
+            <a class="btn btn-primary" href="#" onclick="alert('Let's go! 🚀')">Launch</a>
+            <a class="btn btn-ghost" href="#top" onclick="window.scrollTo({top:0, behavior:'smooth'})">To Top</a>
           </div>
         </div>
         <div class="cta-illustration">
@@ -316,14 +316,14 @@
   </main>
 
   <footer>
-    <div class="credits">© <span id="year"></span> Cosmic. Сделано в космическом настроении. ⭐️</div>
+    <div class="credits">© <span id="year"></span> Cosmic. Made in a cosmic mood. ⭐️</div>
   </footer>
 
   <script>
-    // Актуальный год
+    // Current year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Подсветка карточки по положению курсора
+    // Card highlighting by cursor position
     document.querySelectorAll('.card').forEach(card => {
       card.addEventListener('pointermove', (e) => {
         const rect = card.getBoundingClientRect();
@@ -332,7 +332,7 @@
       });
     });
 
-    // Анимированное звёздное небо
+    // Animated starfield
     (function starfield(){
       const canvas = document.getElementById('starfield');
       const ctx = canvas.getContext('2d');
@@ -369,13 +369,13 @@
 
       function draw(){
         ctx.clearRect(0,0,w,h);
-        // лёгкая дымка космоса
+        // subtle space haze
         const grad = ctx.createRadialGradient(w*0.8, h*0.1, 0, w*0.8, h*0.1, Math.max(w,h)*0.9);
         grad.addColorStop(0, 'rgba(255,107,168,0.03)');
         grad.addColorStop(1, 'rgba(0,0,0,0)');
         ctx.fillStyle = grad; ctx.fillRect(0,0,w,h);
 
-        // звёзды
+        // stars
         stars.forEach(s => {
           s.a += s.tw; const pulse = (Math.sin(s.a*6.283)+1)/2; // 0..1
           ctx.globalAlpha = 0.35 + pulse*0.65;
@@ -384,18 +384,18 @@
         });
         ctx.globalAlpha = 1;
 
-        // метеоры
+        // meteors
         spawnMeteor();
         for (let i = meteors.length-1; i>=0; i--) {
           const m = meteors[i];
           m.x += m.vx; m.y += m.vy; m.life += 16;
-          // хвост
+          // tail
           const grad2 = ctx.createLinearGradient(m.x, m.y, m.x - m.vx*12, m.y - m.vy*12);
           grad2.addColorStop(0, 'rgba(255,255,255,0.9)');
           grad2.addColorStop(1, 'rgba(255,107,200,0)');
           ctx.strokeStyle = grad2; ctx.lineWidth = 2*scale; ctx.beginPath();
           ctx.moveTo(m.x, m.y); ctx.lineTo(m.x - m.vx*8, m.y - m.vy*8); ctx.stroke();
-          // голова
+          // head
           ctx.fillStyle = '#ffffff'; ctx.beginPath(); ctx.arc(m.x, m.y, 1.8*scale, 0, Math.PI*2); ctx.fill();
           if (m.x < -50 || m.y > h+50 || m.life > m.maxLife) meteors.splice(i,1);
         }
